--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
+    "react-jazzicon": "^1.0.4",
     "react-redux": "^8.1.2",
     "react-sticky-box": "^2.0.4",
     "react-yandex-metrika": "^2.6.0",
