--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ NEXT_PUBLIC_YANDEX_METRICA_ID=
 NEXT_PUBLIC_BLOCKNATIVE_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
+NEXT_PUBLIC_TRANSFI_API_KEY=
