--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,4 @@ NEXT_PUBLIC_BLOCKNATIVE_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
 NEXT_PUBLIC_TRANSFI_API_KEY=
+NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=
