--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@web3-onboard/trezor": "^2.3.4",
     "@web3-onboard/walletconnect": "^2.3.9",
     "@web3-onboard/web3auth": "^2.2.0",
+    "@web3auth/base": "^7.0.1",
+    "@web3auth/ethereum-provider": "^7.0.2",
+    "@web3auth/no-modal": "^7.0.1",
+    "@web3auth/openlogin-adapter": "^7.0.1",
+    "@web3auth/web3auth-wagmi-connector": "^5.0.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
@@ -49,7 +54,8 @@
     "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "wagmi": "^1.4.2"
   },
   "devDependencies": {
     "assert": "^2.0.0",
