--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@web3auth/no-modal": "^7.0.1",
     "@web3auth/openlogin-adapter": "^7.0.1",
     "@web3auth/web3auth-wagmi-connector": "^5.0.0",
+    "abitype": "^0.9.8",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
@@ -55,6 +56,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "usehooks-ts": "^2.9.1",
+    "viem": "^1.12.2",
     "wagmi": "^1.4.2"
   },
   "devDependencies": {
