--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "use-deep-compare-effect": "^1.8.1",
     "usehooks-ts": "^2.9.1",
     "viem": "^1.12.2",
     "wagmi": "^1.4.2"
