--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.7",
     "@web3auth/base": "^7.0.4",
     "@web3auth/ethereum-provider": "^7.0.4",
+    "@web3auth/modal": "^7.0.4",
     "@web3auth/no-modal": "^7.0.4",
     "@web3auth/openlogin-adapter": "^7.0.4",
     "@web3auth/torus-wallet-connector-plugin": "^7.0.4",
