--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-ga4": "^2.1.0",
     "react-iframe": "^1.8.5",
     "react-jazzicon": "^1.0.4",
+    "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
     "react-sticky-box": "^2.0.4",
     "react-yandex-metrika": "^2.6.0",
