--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-jazzicon": "^1.0.4",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
+    "react-spinners": "^0.13.8",
     "react-sticky-box": "^2.0.4",
     "react-yandex-metrika": "^2.6.0",
     "redux": "^4.2.1",
