--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
 NEXT_PUBLIC_TRANSFI_API_KEY=
 NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=
-NEXT_PUBLIC_FUSE_API_PUBLIC_KEY=
+NEXT_PUBLIC_FUSE_API_BASE_URL=https://api.fuse.io
