Add FuseBox Web SDK base URL Variable and env

--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,7 @@ NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
 NEXT_PUBLIC_TRANSFI_API_KEY=
 NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=
-NEXT_PUBLIC_FUSE_API_BASE_URL=https://api.fuse.io
+NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=https://accounts.fuse.io
+
+# FuseBox Web SDK
+NEXT_PUBLIC_FUSE_API_BASE_URL=api.fuse.io
