--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_AMPLITUDE_API_KEY=
 NEXT_PUBLIC_TRANSFI_API_KEY=
 NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=
+NEXT_PUBLIC_COIN_GECKO_API_KEY=
