Alchemy for RPCs

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,7 @@ NEXT_PUBLIC_AMPLITUDE_API_KEY=
 NEXT_PUBLIC_TRANSFI_API_KEY=
 NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=
 NEXT_PUBLIC_COIN_GECKO_API_KEY=
+NEXT_PUBLIC_ARBITRUM_API_KEY=
+NEXT_PUBLIC_ETHEREUM_API_KEY=
+NEXT_PUBLIC_POLYGON_API_KEY=
+NEXT_PUBLIC_OPTIMISM_API_KEY=
