--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "use-deep-compare-effect": "^1.8.1",
     "usehooks-ts": "^2.9.1",
     "viem": "^1.12.2",
-    "wagmi": "^1.4.2"
+    "wagmi": "1.4.2"
   },
   "devDependencies": {
     "assert": "^2.0.0",
