--- a/.env.development
+++ b/.env.development
@@ -12,7 +12,7 @@ NEXT_PUBLIC_ARBITRUM_API_KEY=
 NEXT_PUBLIC_ETHEREUM_API_KEY=
 NEXT_PUBLIC_POLYGON_API_KEY=
 NEXT_PUBLIC_OPTIMISM_API_KEY=
-NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=https://accounts.staging.fuse.io
+NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 
 # FuseBox Web SDK
-NEXT_PUBLIC_FUSE_API_BASE_URL=api.staging.fuse.io
+NEXT_PUBLIC_FUSE_API_BASE_URL=
