--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,4 @@ NEXT_PUBLIC_POLYGON_API_KEY=
 NEXT_PUBLIC_OPTIMISM_API_KEY=
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
+NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
