--- a/.env.production
+++ b/.env.production
@@ -12,6 +12,5 @@ NEXT_PUBLIC_ETHEREUM_API_KEY=
 NEXT_PUBLIC_POLYGON_API_KEY=
 NEXT_PUBLIC_OPTIMISM_API_KEY=
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
-
-# FuseBox Web SDK
+NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
