--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@web3auth/modal": "^8.0.0",
     "@web3auth/no-modal": "^8.0.0",
     "@web3auth/openlogin-adapter": "^8.0.0",
+    "@web3auth/wallet-services-plugin": "^8.0.0",
     "@web3auth/web3auth-wagmi-connector": "^6.0.0",
     "abitype": "^1.0.0",
     "autoprefixer": "10.4.15",
