--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^5.22.2",
     "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
     "@web3auth/base": "^8.0.0",
     "@web3auth/ethereum-provider": "^8.0.1",
     "@web3auth/modal": "^8.0.1",
@@ -32,14 +32,14 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.1.0",
     "ethers": "^5.6.9",
     "framer-motion": "^10.16.4",
-    "jazzicon": "^1.5.0",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "jazzicon": "^1.0.2",
+    "next": "^14.1.0",
+    "postcss": "^8.4.35",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-iframe": "^1.8.5",
     "react-jazzicon": "^1.0.4",
