--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-spinners": "^0.13.8",
     "react-sticky-box": "^2.0.5",
     "react-yandex-metrika": "^2.6.0",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
     "use-deep-compare-effect": "^1.8.1",
