--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "^14.1.4",
     "ethers": "^5.7.2",
     "framer-motion": "^11.0.24",
+    "holy-loader": "^2.2.10",
     "jazzicon": "^1.0.2",
     "next": "^14.1.4",
     "postcss": "^8.4.38",
