--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GENERATE_SOURCEMAP=false
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=erlkelrkelrk
-NEXT_PUBLIC_YANDEX_METRICA_ID=dflfkdlfkd
+NEXT_PUBLIC_YANDEX_METRICA_ID=123232
 NEXT_PUBLIC_BLOCKNATIVE_API_KEY=sdmelfkklekf
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=fmdksfmksd
 NEXT_PUBLIC_AMPLITUDE_API_KEY=relelkrlk
@@ -14,3 +14,7 @@ NEXT_PUBLIC_OPTIMISM_API_KEY=ZRfPzBcHouE1y4JWU3_ikY6J7YQshjbW
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
 NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
+NEXT_PUBLIC_CHARGE_PAYMENTS_API_BASE_URL=http://localhost:5001
+NEXT_PUBLIC_CHARGE_PAYMENTS_API_KEY=pk_zwajEErd2__1akIZu5BZhUOl
+NEXT_PUBLIC_CHARGE_BLOCKCHAIN_API_BASE_URL=http://localhost:5003
+
