Add user auth and leaderboard APIs in Airdrop

--- a/.env.production
+++ b/.env.production
@@ -15,3 +15,4 @@ NEXT_PUBLIC_BASE_API_KEY=
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
+NEXT_PUBLIC_AIRDROP_API_BASE_URL=
