--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-ga4": "^2.1.0",
     "react-iframe": "^1.8.5",
     "react-jazzicon": "^1.0.4",
+    "react-markdown": "^9.0.1",
     "react-otp-input": "^3.1.1",
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
