--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,7 @@ NEXT_PUBLIC_OPTIMISM_API_KEY=ZRfPzBcHouE1y4JWU3_ikY6J7YQshjbW
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
 NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
+NEXT_PUBLIC_CHARGE_PAYMENTS_API_BASE_URL=
+NEXT_PUBLIC_CHARGE_PAYMENTS_API_KEY=
+NEXT_PUBLIC_CHARGE_BLOCKCHAIN_API_BASE_URL=
+NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID=
