--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.7",
+    "@dynamic-labs/ethereum": "^3.9.4",
+    "@dynamic-labs/sdk-react-core": "^3.9.4",
+    "@dynamic-labs/wagmi-connector": "^3.9.4",
     "@fuseio/fusebox-web-sdk": "^0.3.9",
     "@layerzerolabs/scan-client": "^0.0.8",
     "@layerzerolabs/ui-core": "^0.2.83",
@@ -18,13 +21,6 @@
     "@metamask/jazzicon": "^2.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.2",
-    "@web3auth/base": "^8.12.4",
-    "@web3auth/ethereum-provider": "^8.12.4",
-    "@web3auth/modal": "^8.12.7",
-    "@web3auth/no-modal": "^8.12.4",
-    "@web3auth/openlogin-adapter": "^8.12.4",
-    "@web3auth/wallet-services-plugin": "^8.12.5",
-    "@web3auth/web3auth-wagmi-connector": "^6.0.0",
     "abitype": "^1.0.6",
     "axios": "^1.7.7",
     "ethers": "^5.7.2",
