[FEAT] Implement AI Assistant functionality with chat interface

--- a/.env
+++ b/.env
@@ -17,4 +17,5 @@ NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
 NEXT_PUBLIC_CHARGE_PAYMENTS_API_BASE_URL=http://localhost:5001
 NEXT_PUBLIC_CHARGE_PAYMENTS_API_KEY=pk_zwajEErd2__1akIZu5BZhUOl
 NEXT_PUBLIC_CHARGE_BLOCKCHAIN_API_BASE_URL=http://localhost:5003
-
+NEXT_PUBLIC_AGENT_ID=
+NEXT_PUBLIC_AGENT_API_URL=
