--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,5 @@ NEXT_PUBLIC_OPTIMISM_API_KEY=ZRfPzBcHouE1y4JWU3_ikY6J7YQshjbW
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
 NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
+NEXT_PUBLIC_AGENT_ID=
+NEXT_PUBLIC_AGENT_API_URL=
