--- a/.env.production
+++ b/.env.production
@@ -15,3 +15,5 @@ NEXT_PUBLIC_BASE_API_KEY=
 NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
+NEXT_PUBLIC_AGENT_ID=
+NEXT_PUBLIC_AGENT_API_URL=
