--- a/.env.production
+++ b/.env.production
@@ -21,3 +21,5 @@ NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID=
 NEXT_PUBLIC_PAYMASTER_FUNDER_ADDRESS=
 NEXT_PUBLIC_AIRDROP_API_BASE_URL=
 NEXT_PUBLIC_AVAIL_MONITORING_API_URL=
+NEXT_PUBLIC_AGENT_ID=
+NEXT_PUBLIC_AGENT_API_URL=
