--- a/package.json
+++ b/package.json
@@ -4,51 +4,51 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "^2.11.7",
-    "@dynamic-labs/ethereum": "^3.9.4",
-    "@dynamic-labs/sdk-react-core": "^3.9.4",
-    "@dynamic-labs/wagmi-connector": "^3.9.4",
+    "@amplitude/analytics-browser": "^2.11.10",
+    "@dynamic-labs/ethereum": "3.9.4",
+    "@dynamic-labs/sdk-react-core": "3.9.4",
+    "@dynamic-labs/wagmi-connector": "3.9.4",
     "@fuseio/fusebox-web-sdk": "^0.3.9",
     "@layerzerolabs/scan-client": "^0.0.8",
-    "@layerzerolabs/ui-core": "^0.2.83",
+    "@layerzerolabs/ui-core": "^0.2.88",
     "@layerzerolabs/ui-erc20-sdk": "^1.0.2",
     "@layerzerolabs/ui-evm": "^0.1.24",
     "@metamask/jazzicon": "^2.0.0",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.56.2",
-    "abitype": "^1.0.6",
-    "axios": "^1.7.7",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.62.10",
+    "abitype": "^1.0.8",
+    "axios": "^1.7.9",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
-    "framer-motion": "^11.9.0",
-    "holy-loader": "^2.3.7",
+    "framer-motion": "^11.15.0",
+    "holy-loader": "^2.3.11",
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
-    "next": "^14.2.13",
+    "next": "^14.2.21",
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-iframe": "^1.8.5",
     "react-jazzicon": "^1.0.4",
     "react-qr-code": "^2.0.15",
-    "react-redux": "^9.1.2",
-    "react-spinners": "^0.14.1",
+    "react-redux": "^9.2.0",
+    "react-spinners": "^0.15.0",
     "react-sticky-box": "^2.0.5",
     "react-yandex-metrika": "^2.6.0",
     "sharp": "^0.33.5",
     "use-deep-compare-effect": "^1.8.1",
     "usehooks-ts": "^3.1.0",
-    "viem": "^2.21.16",
-    "wagmi": "^2.12.16",
-    "yup": "^1.4.0"
+    "viem": "^2.21.57",
+    "wagmi": "^2.14.6",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.10",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -56,7 +56,7 @@
     "autoprefixer": "^10.4.20",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "https-browserify": "^1.0.0",
@@ -66,8 +66,8 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.6.2",
     "util": "^0.12.5"
   }
 }
