--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-sticky-box": "^2.0.5",
     "react-yandex-metrika": "^2.6.0",
     "sharp": "^0.33.5",
+    "swiper": "^11.2.1",
     "use-deep-compare-effect": "^1.8.1",
     "usehooks-ts": "^3.1.0",
     "viem": "^2.21.16",
