--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "holy-loader": "^2.3.7",
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.471.1",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
@@ -45,6 +46,7 @@
     "react-sticky-box": "^2.0.5",
     "react-yandex-metrika": "^2.6.0",
     "sharp": "^0.33.5",
+    "tailwindcss-animate": "^1.0.7",
     "use-deep-compare-effect": "^1.8.1",
     "usehooks-ts": "^3.1.0",
     "viem": "^2.21.16",
