Redesign AI Agent

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tailwindcss-animate": "^1.0.7",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "use-deep-compare-effect": "^1.8.1",
     "usehooks-ts": "^3.1.0",
     "viem": "^2.21.57",
