Add Operator Billing Subscription

--- a/.env.development
+++ b/.env.development
@@ -18,3 +18,4 @@ NEXT_PUBLIC_CHARGE_PAYMENTS_API_BASE_URL=
 NEXT_PUBLIC_CHARGE_PAYMENTS_API_KEY=
 NEXT_PUBLIC_CHARGE_BLOCKCHAIN_API_BASE_URL=
 NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID=
+NEXT_PUBLIC_PAYMASTER_FUNDER_ADDRESS=
