Add Avail Monitoring API in Nodes

--- a/.env.development
+++ b/.env.development
@@ -16,3 +16,4 @@ NEXT_PUBLIC_FUSE_ACCOUNT_API_BASE_URL=
 NEXT_PUBLIC_FUSE_API_BASE_URL=
 NEXT_PUBLIC_AMPLITUDE_SERVER_URL=
 NEXT_PUBLIC_AIRDROP_API_BASE_URL=
+NEXT_PUBLIC_AVAIL_MONITORING_API_URL=
