--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@metamask/jazzicon": "^2.0.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.10",
+    "@tanstack/react-table": "^8.20.6",
     "abitype": "^1.0.8",
     "axios": "^1.7.9",
-    "@tanstack/react-table": "^8.20.6",
     "color-convert": "^2.0.1",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
@@ -31,8 +31,9 @@
     "holy-loader": "^2.3.11",
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
-    "next": "^14.2.21",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.473.0",
+    "next": "^14.2.21",
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
@@ -46,7 +47,6 @@
     "react-sticky-box": "^2.0.5",
     "react-yandex-metrika": "^2.6.0",
     "sharp": "^0.33.5",
-    "tailwindcss-animate": "^1.0.7",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -57,8 +57,8 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13",
     "@types/color-convert": "^2.0.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
