--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "@metamask/jazzicon": "^2.0.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.10",
+    "@tanstack/react-table": "^8.20.6",
     "abitype": "^1.0.8",
     "axios": "^1.7.9",
-    "@tanstack/react-table": "^8.20.6",
     "color-convert": "^2.0.1",
+    "date-fns": "^4.1.0",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "holy-loader": "^2.3.11",
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
-    "next": "^14.2.21",
     "lucide-react": "^0.473.0",
+    "next": "^14.2.21",
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
@@ -55,8 +56,8 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13",
     "@types/color-convert": "^2.0.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
