feat: testnet rewards

--- a/.env.development
+++ b/.env.development
@@ -21,4 +21,5 @@ NEXT_PUBLIC_DYNAMIC_ENVIRONMENT_ID=
 NEXT_PUBLIC_PAYMASTER_FUNDER_ADDRESS=
 NEXT_PUBLIC_AIRDROP_API_BASE_URL=
 NEXT_PUBLIC_AVAIL_MONITORING_API_URL=
+NEXT_PUBLIC_AVAIL_REWARD_API_URL=
 NEXT_PUBLIC_CHARGE_PAYMENTS_API_BASE_URL=
